--- a/mappa.html
+++ b/mappa.html
@@ -21,7 +21,7 @@ const options = {
   lng: -120,
   zoom: 3,
   //style: "https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png"
-  style: "https://tiles.stadiamaps.com/tiles/stamen_toner_lite/{z}/{x}/{y}{r}.png"
+  style: "https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png"
 
   
 }
