--- a/mappanew.html
+++ b/mappanew.html
@@ -21,8 +21,8 @@ const options = {
   lng: -120,
   zoom: 3,
   //style: "https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png"
-  //style: "https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png"
-style: "https://tiles.stadiamaps.com/tiles/alidade_smooth_dark/{z}/{x}/{y}{r}.png"
+  style: "https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png"
+//style: "https://tiles.stadiamaps.com/tiles/alidade_smooth_dark/{z}/{x}/{y}{r}.png"
   
 }
 
